unpackaged/main/default/objects/Program__c/fields/Academic_Accommodation__c.field-meta.xml
<CustomField>
    <fullName>Academic_Accommodation__c</fullName>
    <formula>HYPERLINK( Academic_Accommodation_CG_URL__c , Academic_Accommodation_CG_URL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Academic Accommodation</label>
    <type>Text</type>
</CustomField>