unpackaged/main/default/objects/Program__c/fields/Academic_Provider__c.field-meta.xml
<CustomField>
    <fullName>Academic_Provider__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Academic Provider</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Academic Provider Account does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>University</value>
        </filterItems>
        <filterItems>
            <field>Account.School_of_Record__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Programs</relationshipLabel>
    <relationshipName>Programs1</relationshipName>
    <type>Lookup</type>
</CustomField>