unpackaged/main/default/objects/Program__c/fields/Acknowledgement_of_Risk__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_of_Risk__c</fullName>
    <description>A program-specific link to the Acknowledgement and Assumption of Risks &amp; Release and Indemnity Agreement form</description>
    <formula>hyperlink(&#39;vertoeducation.formstack.com/forms/risks_and_indemnification_form_fall_2021?aid=[netid2]&amp;program=&#39; + Id + &#39;&amp;semester=&#39; + SUBSTITUTE(Semester__r.Name, &quot; &quot;,&quot;%20&quot;),

&#39;vertoeducation.formstack.com/forms/risks_and_indemnification_form_fall_2021?aid=[netid2]&amp;program=&#39; + Id + &#39;&amp;semester=&#39; + SUBSTITUTE(Semester__r.Name, &quot; &quot;,&quot;%20&quot;)
)</formula>
    <label>Acknowledgement of Risk</label>
    <type>Text</type>
</CustomField>