unpackaged/main/default/objects/Program__c/fields/Code_of_Conduct__c.field-meta.xml
<CustomField>
    <fullName>Code_of_Conduct__c</fullName>
    <description>A program-specific link to the Student Code of Conduct form</description>
    <formula>HYPERLINK(&#39;https://Vertoeducation.formstack.com/forms/student_code_of_conduct?aid=[netid2]&amp;program=&#39; + Id + &#39;&amp;semester=&#39; + SUBSTITUTE(Semester__r.Name, &quot; &quot;,&quot;%20&quot;),

&#39;https://Vertoeducation.formstack.com/forms/student_code_of_conduct?aid=[netid2]&amp;program=&#39; + Id + &#39;&amp;semester=&#39; + SUBSTITUTE(Semester__r.Name, &quot; &quot;,&quot;%20&quot;)
)</formula>
    <label>Code of Conduct</label>
    <type>Text</type>
</CustomField>