unpackaged/main/default/objects/Program__c/fields/Dietary_Accommodation__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Accommodation__c</fullName>
    <formula>HYPERLINK( Dietary_Accommodations_CG_URL__c , Dietary_Accommodations_CG_URL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dietary Accommodation</label>
    <type>Text</type>
</CustomField>