unpackaged/main/default/objects/Program__c/fields/Dietary_Accommodations_CG_URL__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Accommodations_CG_URL__c</fullName>
    <formula>&#39;vertoeducation.force.com/Forms/s/DietaryAccommodation?aid=[netid2]&amp;program=&#39;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dietary Accommodations CG URL</label>
    <type>Text</type>
</CustomField>