unpackaged/main/default/objects/Program__c/fields/Financial_Appeal__c.field-meta.xml
<CustomField>
    <fullName>Financial_Appeal__c</fullName>
    <description>A program-specific link to the Financial Appeal form</description>
    <formula>hyperlink(&#39;https://Vertoeducation.formstack.com/forms/financial_appeal_form_1?aid=[netid2]&amp;program=&#39; + Id,

&#39;https://Vertoeducation.formstack.com/forms/financial_appeal_form_1?aid=[netid2]&amp;program=&#39; + Id)</formula>
    <label>Financial Appeal</label>
    <type>Text</type>
</CustomField>