unpackaged/main/default/objects/Program__c/fields/Flight_Arrival_Window_End__c.field-meta.xml
<CustomField>
    <fullName>Flight_Arrival_Window_End__c</fullName>
    <label>Flight Arrival Window End</label>
    <type>DateTime</type>
</CustomField>