unpackaged/main/default/objects/Program__c/fields/Flight_Arrival_Window_Start__c.field-meta.xml
<CustomField>
    <fullName>Flight_Arrival_Window_Start__c</fullName>
    <description>Tracks period in which a student can arrive in order to be picked up from the airport
Example: Cost Rica will only pick you up if you arrive between 12pm-8pm local time</description>
    <inlineHelpText>Tracks period in which a student can arrive in order to be picked up from the airport</inlineHelpText>
    <label>Flight Arrival Window Start</label>
    <type>DateTime</type>
</CustomField>