unpackaged/main/default/objects/Program__c/fields/Flight_Submission__c.field-meta.xml
<CustomField>
    <fullName>Flight_Submission__c</fullName>
    <formula>HYPERLINK( Flight_Submission_CG_URL__c , Flight_Submission_CG_URL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight Submission</label>
    <type>Text</type>
</CustomField>