unpackaged/main/default/objects/Program__c/fields/Flight_Submission_CG_URL__c.field-meta.xml
<CustomField>
    <fullName>Flight_Submission_CG_URL__c</fullName>
    <formula>&#39;vertoeducation.force.com/Forms/s/FlightSubmission?aid=[netid2]&amp;program=&#39;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight Submission CG URL</label>
    <type>Text</type>
</CustomField>