unpackaged/main/default/objects/Program__c/fields/Health_History__c.field-meta.xml
<CustomField>
    <fullName>Health_History__c</fullName>
    <description>A program-specific link to the Health History and Emergency Contact form</description>
    <formula>hyperlink(&#39;https://Vertoeducation.formstack.com/forms/health_history_and_emergency_contact?aid=[netid2]&amp;program=&#39; +  Id,
&#39;https://Vertoeducation.formstack.com/forms/health_history_and_emergency_contact?aid=[netid2]&amp;program=&#39; +  Id)</formula>
    <label>Health History</label>
    <type>Text</type>
</CustomField>