unpackaged/main/default/objects/Program__c/fields/Housing_Accommodation__c.field-meta.xml
<CustomField>
    <fullName>Housing_Accommodation__c</fullName>
    <formula>HYPERLINK( Housing_Accommodation_CG_URL__c , Housing_Accommodation_CG_URL__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Housing Accommodation</label>
    <type>Text</type>
</CustomField>