unpackaged/main/default/objects/Program__c/fields/Housing_Preference__c.field-meta.xml
<CustomField>
    <fullName>Housing_Preference__c</fullName>
    <formula>HYPERLINK( Housing_Preference_CG_URL__c ,  Housing_Preference_CG_URL__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Housing Preference</label>
    <type>Text</type>
</CustomField>