unpackaged/main/default/objects/Program__c/fields/Housing_Preference_CG_URL__c.field-meta.xml
<CustomField>
    <fullName>Housing_Preference_CG_URL__c</fullName>
    <formula>&#39;vertoeducation.force.com/Forms/s/HousingPreference?aid=[netid2]&amp;program=&#39;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Housing Preference CG URL</label>
    <type>Text</type>
</CustomField>