unpackaged/main/default/objects/Program__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Programs</relationshipLabel>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>