unpackaged/main/default/objects/Program__c/fields/Passport_Upload__c.field-meta.xml
<CustomField>
    <fullName>Passport_Upload__c</fullName>
    <formula>HYPERLINK( Passport_Upload_CG_URL__c , Passport_Upload_CG_URL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passport Upload</label>
    <type>Text</type>
</CustomField>