unpackaged/main/default/objects/Program__c/fields/Passport_Upload_CG_URL__c.field-meta.xml
<CustomField>
    <fullName>Passport_Upload_CG_URL__c</fullName>
    <formula>&#39;vertoed.secure.force.com/PassportUpload?aid=[netid2]&amp;program=&#39;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passport Upload CG URL</label>
    <type>Text</type>
</CustomField>