unpackaged/main/default/objects/Program__c/fields/Payment_and_Cancellation_Policy__c.field-meta.xml
<CustomField>
    <fullName>Payment_and_Cancellation_Policy__c</fullName>
    <description>A program-specific link to the Payment and Cancellation Policy form</description>
    <formula>HYPERLINK(&#39;https://Vertoeducation.formstack.com/forms/payment_cancellation_policy_fall_2021?aid=[netid2]&amp;program=&#39; + Id + &#39;&amp;semester=&#39; + SUBSTITUTE(Semester__r.Name, &quot; &quot;,&quot;%20&quot;),

&#39;https://Vertoeducation.formstack.com/forms/payment_cancellation_policy_fall_2021?aid=[netid2]&amp;program=&#39; + Id + &#39;&amp;semester=&#39; + SUBSTITUTE(Semester__r.Name, &quot; &quot;,&quot;%20&quot;)
)</formula>
    <label>Payment and Cancellation Policy</label>
    <type>Text</type>
</CustomField>