unpackaged/main/default/objects/Program__c/fields/Program_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_End_Date__c</fullName>
    <description>Semester end date handled at the program level. Typically handled by Akilah or a Salesforce Admin.</description>
    <label>Program End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>