unpackaged/main/default/objects/Program__c/fields/Program_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Start_Date__c</fullName>
    <description>Semester start date, but handled per program. This is typically maintained by Akilah or another Salesforce Admin.</description>
    <label>Program Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>