unpackaged/main/default/objects/Program__c/fields/Roommate_Request__c.field-meta.xml
<CustomField>
    <fullName>Roommate_Request__c</fullName>
    <formula>HYPERLINK( Roommate_Request_CG_URL__c ,  Roommate_Request_CG_URL__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Roommate Request</label>
    <type>Text</type>
</CustomField>