unpackaged/main/default/objects/Program__c/fields/Roommate_Request_CG_URL__c.field-meta.xml
<CustomField>
    <fullName>Roommate_Request_CG_URL__c</fullName>
    <formula>&#39;vertoeducation.force.com/Forms/s/RoommatePreference?aid=[netid2]&amp;program=&#39;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Roommate Request CG URL</label>
    <type>Text</type>
</CustomField>