unpackaged/main/default/objects/Program__c/fields/Semester__c.field-meta.xml
<CustomField>
    <fullName>Semester__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Semester</label>
    <referenceTo>Semester__c</referenceTo>
    <relationshipLabel>Programs</relationshipLabel>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>