unpackaged/main/default/objects/Program__c/fields/Student_Success_Survey__c.field-meta.xml
<CustomField>
    <fullName>Student_Success_Survey__c</fullName>
    <formula>HYPERLINK( Student_Success_Survey_CG_URL__c ,  Student_Success_Survey_CG_URL__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Success Survey</label>
    <type>Text</type>
</CustomField>