unpackaged/main/default/objects/Program__c/fields/Student_Success_Survey_CG_URL__c.field-meta.xml
<CustomField>
    <fullName>Student_Success_Survey_CG_URL__c</fullName>
    <formula>&#39;vertoeducation.force.com/Forms/s/StudentSuccessSurvey?aid=[netid2]&amp;program=&#39;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Success Survey CG URL</label>
    <type>Text</type>
</CustomField>