unpackaged/main/default/objects/Program__c/fields/Transportation_Accommodation__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Accommodation__c</fullName>
    <formula>HYPERLINK( Transportation_Accommodation_CG_URL__c , Transportation_Accommodation_CG_URL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transportation Accommodation</label>
    <type>Text</type>
</CustomField>