unpackaged/main/default/objects/Program__c/fields/Transportation_Accommodation_CG_URL__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Accommodation_CG_URL__c</fullName>
    <formula>&#39;vertoeducation.force.com/Forms/s/TransportationAccommodation?aid=[netid2]&amp;program=&#39;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transportation Accommodation CG URL</label>
    <type>Text</type>
</CustomField>