unpackaged/main/default/objects/Program__c/recordTypes/Standard_Program.recordType-meta.xml
<RecordType>
    <fullName>Standard_Program</fullName>
    <active>true</active>
    <description>The record type for program location and semester designation</description>
    <label>Standard Program</label>
</RecordType>