unpackaged/main/default/objects/Program__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>