unpackaged/main/default/objects/Program__c/listViews/Programs_with_ID.listView-meta.xml
<ListView>
    <fullName>Programs_with_ID</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>Programs with ID</label>
</ListView>