unpackaged/main/default/objects/Program__c/listViews/X2022_Programs.listView-meta.xml
<ListView>
    <fullName>X2022_Programs</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>Semester__c</columns>
    <columns>Status__c</columns>
    <columns>Academic_Provider__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Semester__c</field>
        <operation>contains</operation>
        <value>2022</value>
    </filters>
    <label>2022 Programs</label>
</ListView>