unpackaged/main/default/objects/Program__c/listViews/X2023_Programs.listView-meta.xml
<ListView>
    <fullName>X2023_Programs</fullName>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>Semester__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Semester__c</field>
        <operation>contains</operation>
        <value>2023</value>
    </filters>
    <label>2023 Programs</label>
</ListView>